ChangeLog

Upcoming version
[BUGFIX]  Show dashboard widgets in TYPO3 12, thanks to Torben Hansen, https://github.com/tpwd/ke_search/issues/170
[BUGFIX]  Avoid undefined array key warning in doc, pdf and xls file indexers, thanks to Andreas Kessel, https://github.com/tpwd/ke_search/issues/171

Version 5.0.2, 13 June 2023
[BUGFIX]  Security Bugfix. Please update!

Version 5.0.1, 2 June 2023
[BUGFIX]  Fix undefined array key issues, cherry-pick fix from https://github.com/tpwd/ke_search/commit/5a9ce7063ce89c4de249e720a91490930a885edf
[BUGFIX]  Fix regression caused by "mixed" type hint which is not available for PHP 7.4, see https://github.com/tpwd/ke_search/issues/166

Version 5.0.0, 26 May 2023
[!!!]     This version supports TYPO3 12 and 11 and drops support for TYPO3 10.
[!!!]     If you use a custom template for "SearchForm.html" please replace "{f:uri.page(pageUid: targetpage)}" with "{targetPageUrl}".
[TASK]    Mark extension as compatible with TYPO3 12 and drop support for TYPO3 10
[TASK]    Add getOptions function to widget and add type declarations.
[TASK]    Replace execute with executeQuery and executeStatement
[TASK]    Apply changes from rector v11 rules and respect protected cObj
[TASK]    Remove deprecated languageService initialization
[TASK]    Remove DBALException annotation
[TASK]    Remove obsolete icon registration
[TASK]    Use new module registration and remove CSH file registration
[TASK]    Replace be.container viewhelper
[TASK]    Refactor fetching the number of records in the index
[TASK]    Refactor searchresult class to reduce dependencies
[TASK]    Replace fetch with fetchAssociative and declare property in PluginBaseHelper
[TASK]    Avoid using f:uri viewhelper in the searchbox template because that now only works in extbase context.
[TASK]    Add property types
[TASK]    Rework backend module to work with TYPO3 12
[TASK]    Migrate outdated fetch() calls in query builder usages
[TASK]    Cleanup: Remove unused properties